# traffic-data-bengaluru

./: .env.example  .gitignore  README.md  bmtc.html  bmtc.html.md  cli.py  crontab.txt  index.html  index.html.md  pyproject.toml  requirements.txt  robots.txt  search.json  settings.ini  sitemap.xml  utils.html  utils.html.md
.devcontainer/: devcontainer.json
apis/: app.html  app.html.md  namma_metro.html  namma_metro.html.md
app/: README.md  about.py  main.py
app/bmtc/: routes.py
app/namma_metro/: ridership.py
apps/namma_metro/: main.py
apps/traffic_data_bengaluru/: README.md
bmtc/: route_details.html  route_details.html.md  route_points.html  route_points.html.md  routes.html  routes.html.md  time_tables.html  traffic.html  traffic.html.md  trip_details.html  trip_details.html.md  vehicles.html  vehicles.html.md
bmtc/apis/: route_details.html  route_details.html.md  route_points.html  route_points.html.md  routes.html  routes.html.md  time_tables.html  time_tables.html.md  trip_details.html  (+5 more)
namma-bmtc-app/: .gitignore  _quarto.yml  crontab  namma-bmtc-app.qmd
namma_metro/: ridership.html  ridership.html.md
nbs/: _quarto.yml  bmtc.html.md  bmtc.ipynb  index.ipynb  nbdev.yml  sidebar.yml  utils.ipynb
scripts/: README.md  bmtc_fetch_route_details.sh  bmtc_fetch_route_details_v2.sh  bmtc_fetch_route_points.sh  bmtc_fetch_routes.sh  bmtc_fetch_trip_details.sh  bmtc_fetch_vehicle_trip_details.sh  bmtc_fetch_vehicles.sh  download.sh  rsync.sh  upload.sh
traffic/: bmtc.html  bmtc.html.md
traffic_data_bengaluru/: _modidx.py  bmtc.py  utils.py
(+54 files in other folders)
