[tool.poetry]
name = "traffic-data-bengaluru"
version = "0.1.0"
description = "Bengaluru Data Bengaluru"
authors = ["Traffic Kowshik <traffic.kowshik@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.30.0"
pandas = "^2.1.0"
requests = "^2.32.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
